fix: Fix right menu overlap issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -299,7 +299,7 @@
 
   @media (max-width: 1200px) {
     .bodyPostContainer {
-      @apply pr-[10%];
+      @apply px-[8%];
     }
   }
 
